# RecompFrontend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
recompinput/: CMakeLists.txt
recompinput/include/recompinput/: input_binding.h  input_events.h  input_mapping.h  input_state.h  input_types.h  players.h  profiles.h  recompinput.h
recompinput/src/: input_binding.cpp  input_events.cpp  input_mapping.cpp  input_state.cpp  input_types.cpp  json.cpp  json.h  players.cpp  profiles.cpp
recompui/: CMakeLists.txt
recompui/include/recompui/: config.h  event_structs.h  program_config.h  recompui.h  renderer.h
recompui/lib/: FindFreetype.cmake
recompui/shaders/: InterfacePS.hlsl
recompui/src/api/: ui_api.cpp  ui_api_events.cpp  ui_api_images.cpp  ui_helpers.h
recompui/src/base/: ui_game_option.cpp  ui_game_option.h  ui_launcher.cpp  ui_launcher.h  ui_launcher_common.h  ui_state.cpp
recompui/src/composites/: ui_assign_players_modal.cpp  ui_assign_players_modal.h  ui_config_sub_menu.cpp  ui_mod_details_panel.cpp  ui_mod_details_panel.h  ui_mod_installer.cpp  ui_mod_menu.cpp  ui_mod_menu.h  ui_player_card.cpp  ui_player_card.h  ui_prompt.cpp
recompui/src/config/: ui_config.cpp  ui_config_option.cpp  ui_config_option.h  ui_config_page_controls.cpp  ui_config_page_controls.h  ui_config_page_options_menu.cpp  ui_config_page_options_menu.h  ui_config_tab_controls.cpp  ui_config_tab_general.cpp  ui_config_tab_graphics.cpp  ui_config_tab_mods.cpp  ui_config_tab_sound.cpp
recompui/src/core/: ui_context.cpp  ui_context.h
recompui/src/data/: base_rcss.cpp  base_rcss.h
recompui/src/elements/: ui_binding_button.cpp  ui_binding_button.h  ui_button.cpp  ui_button.h  ui_clickable.cpp  ui_clickable.h  ui_config_page.cpp  ui_config_page.h  ui_container.cpp  ui_container.h  ui_document.cpp  ui_document.h  ui_element.cpp  ui_element.h  ui_icon_button.cpp  ui_icon_button.h  ui_image.cpp  ui_image.h  ui_label.cpp  ui_label.h  ui_modal.cpp  ui_modal.h  ui_pill_button.cpp  ui_pill_button.h  ui_pseudo_border.cpp  ui_pseudo_border.h  ui_radio.cpp  ui_radio.h  ui_scroll_container.cpp  ui_scroll_container.h  ui_select.cpp  ui_select.h  ui_slider.cpp  ui_slider.h  ui_span.cpp  ui_span.h  ui_style.cpp  ui_style.h  ui_svg.cpp  ui_svg.h  (+9 more)
recompui/src/renderer/: InterfacePS.hlsl.dxil.h  InterfaceVS.hlsl.dxil.h  rt64_render_context.cpp  ui_renderer.cpp  ui_renderer.h
recompui/src/rml_elements/: ui_rml_color_element.cpp  ui_rml_color_element.h  ui_rml_elements.cpp  ui_rml_elements.h
recompui/src/rml_hacks/: ui_color_hack.cpp  ui_rml_hacks.cpp
recompui/src/util/: file.cpp  file.h  program_config.cpp  program_config.h  steam_deck.cpp  steam_deck.h  support_apple.mm  ui_utils.cpp
